--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,7 @@
   --first-color: hsl(214,100%,34%,100%);
   --first-color-light: hsl(var(--hue), var(--sat), 85%);
   --first-color-lighten: hsl(var(--hue), var(--sat), 80%);
-  --first-color-alt: hsl(var(--hue), var(--sat), 53%);
+  --first-color-alt: hsl(214,88%,35%,80%);
   --title-color: hsl(var(--hue), 4%, 15%);
   --text-color: hsl(var(--hue), 15%, 44%);
   --text-color-light: hsl(var(--hue), 4%, 65%);
@@ -195,7 +195,18 @@ body.dark-theme {
   row-gap: 1.5rem;
 }
 
-.nav__link, .nav__logo, .nav__toggle {
+.nav__logo {
+  color: var(--first-color);
+  font-weight: bold;
+  display: flex ;
+}
+
+.isLogo{
+  align-items: center;
+  justify-content: center;
+}
+
+.nav__link, .nav__toggle {
   color: #81795f;
   font-weight: var(--font-semi-bold);
 }
